Layout improvements, fix dark mode, new logo

--- a/src/css/custom-code.css
+++ b/src/css/custom-code.css
@@ -15,6 +15,7 @@ code[class*="language-"] {
 
 .gatsby-highlight pre {
   max-width: 80vw;
+  padding-top: 1.5em;
 }
 
 .gatsby-highlight:before {
