--- a/src/templates/post.css
+++ b/src/templates/post.css
@@ -1,9 +1,9 @@
 .blog-post-container h1 {
-  font-size: 1.6em;
+  font-size: 1.6rem;
   margin: 0;
 }
 
 .blog-post-container h2 {
-  font-size: 1.2em;
+  font-size: 1.2rem;
   margin: 0;
 }
